--- a/src/main/resources/application-github.yml
+++ b/src/main/resources/application-github.yml
@@ -41,7 +41,7 @@ moni:
     gemini:
       model: gemini-2.5-pro
     deepseek:
-      model: DeepSeek-V3.1
+      model: deepseek-v3.2
     claude:
       model: claude-sonnet-4-20250514
     intent:
